tests/baselines/reference/typeofClass.errors.txt
tests/cases/compiler/typeofClass.ts(8,4): error TS2576: Property 'bar' is a static member of type 'K'
tests/cases/compiler/typeofClass.ts(10,4): error TS2339: Property 'foo' does not exist on type 'typeof K'.


==== tests/cases/compiler/typeofClass.ts (2 errors) ====
    class K {
        foo: number;
        static bar: string;
    }
    
    var k1: K;
    k1.foo;
    k1.bar;
       ~~~
!!! error TS2576: Property 'bar' is a static member of type 'K'
    var k2: typeof K;
    k2.foo;
       ~~~
!!! error TS2339: Property 'foo' does not exist on type 'typeof K'.
    k2.bar;